--- a/2.10/2.10 lesson example/index.html
+++ b/2.10/2.10 lesson example/index.html
@@ -7,11 +7,10 @@
     <title>Ejercicio</title>
   </head>
   <body>
-    <button class="js-number">Number!!!</button>
+    <button class="js-emoji">Emoji!!!</button>
     <p class="js-result"></p>
-
-    <button class="js-password">Password!!!</button>
-    <p class="js-result2"></p>
+    <button class="js-dog">Perretes!!!</button>
+    <img />
     <script src="./main.js"></script>
   </body>
 </html>
