--- a/2.10/2.10.1/index.html
+++ b/2.10/2.10.1/index.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
   <head>
-    <meta charset="utf-8">
-    <title>Mi primer código JavaScript</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Ejercicio</title>
   </head>
   <body>
-    <p>Hola</p>
-    <script type="text/javascript" src="./main.js"></script>
+    <button class="js-number">Number!!!</button>
+    <p class="js-result"></p>
+
+    <button class="js-password">Password!!!</button>
+    <p class="js-result2"></p>
+    <script src="./main.js"></script>
   </body>
 </html>
