adding repaso final 2.1

--- a/2.12/2.12 class exercises/index.html
+++ b/2.12/2.12 class exercises/index.html
@@ -2,10 +2,13 @@
 <html lang="es">
   <head>
     <meta charset="utf-8" />
+    <link rel="stylesheet" href="main.css" />
     <title>Mi primer código JavaScript</title>
   </head>
-  <body>
-    <p>Hola</p>
+  <body class="page">
+    <h1>Ejemplo de data set y escuchado</h1>
+    <h2>Ejemplo con DOM avanzado</h2>
+    <ul class="js-list ml-1"></ul>
     <script type="text/javascript" src="./main.js"></script>
   </body>
 </html>
