--- a/resolucion de dudas 2/index.html
+++ b/resolucion de dudas 2/index.html
@@ -4,8 +4,10 @@
     <meta charset="utf-8" />
     <title>Mi primer código JavaScript</title>
   </head>
-  <body>
-    <p>Hola</p>
+  <body class="body">
+    <form>
+      <input type="text" class="js-input" />
+    </form>
     <script type="text/javascript" src="./main.js"></script>
   </body>
 </html>
