--- a/2.12/index.html
+++ b/2.12/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
   <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8">
     <title>Mi primer código JavaScript</title>
   </head>
   <body>
